--- a/gerenciador_clientes/pubspec.yaml
+++ b/gerenciador_clientes/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^2.24.2 # Para iniciar o Firebase
+  cloud_firestore: ^4.13.3 # Para usar o Firestore
 
 dev_dependencies:
   flutter_test:
@@ -17,3 +19,4 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
